<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etSummand1"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/etSummand1"
        android:inputType="text"
        android:paddingStart="10dp"
        android:singleLine="false"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOperator"
        tools:ignore="MissingConstraints,RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/tvSummand2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="165dp"
        android:background="@drawable/border"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:textColor="#121212"
        android:textSize="18sp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvOperator"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="165dp"
        android:background="@drawable/border"
        android:paddingStart="10dp"
        android:paddingTop="12dp"
        android:textColor="#121212"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSummand2"
        app:layout_constraintVertical_bias="0.016"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:text="@string/btn9"
        android:textColor="#039BE5"

        android:textSize="24sp"
        app:flow_firstHorizontalBias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btn6"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:text="@string/btn4"
        android:textColor="#039BE5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:text="@string/btn6"
        android:textColor="#039BE5"
        android:textSize="24sp"
        app:flow_firstHorizontalBias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:text="@string/btn5"
        android:textColor="#039BE5"
        android:textSize="24sp"
        app:flow_firstHorizontalBias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/blue"
        android:text="@string/btnMinus"
        android:textColor="#FFFFFF"
        android:textSize="24sp"

        app:flow_firstHorizontalBias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/blue"
        android:text="@string/btnDivide"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnPoint"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiply"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/blue"
        android:hapticFeedbackEnabled="false"
        android:text="@string/btnMultiply"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:flow_firstHorizontalBias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:text="@string/btn7"
        android:textColor="#039BE5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:text="@string/btn8"
        android:textColor="#039BE5"
        android:textSize="24sp"
        app:flow_firstHorizontalBias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/blue"
        android:backgroundTintMode="add"
        android:text="@string/btnPlus"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:flow_firstHorizontalBias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/etSummand1"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnPoint"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/blue"
        android:text="@string/btnPoint"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn9"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:text="@string/btn3"
        android:textColor="#039BE5"
        android:textSize="24sp"
        app:flow_firstHorizontalBias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/etSummand1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:text="@string/btn2"
        android:textColor="#039BE5"
        android:textSize="24sp"
        app:flow_firstHorizontalBias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/etSummand1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="161dp"
        android:layout_height="80dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:background="@color/blue"
        android:text="@string/btn0"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7"
        tools:ignore="MissingConstraints,TextContrastCheck" />



    <Button
        android:id="@+id/btn1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:text="@string/btn1"
        android:textColor="#039BE5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSummand1"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/btnEqually"
        android:layout_width="161dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="44dp"
        android:background="#FFC107"
        android:text="@string/btnEqually"
        android:textColor="#D81B60"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn0"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:background="@color/grey"
        android:text="@string/btnClear"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnEqually"
        app:layout_constraintTop_toBottomOf="@+id/btnDivide"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>